developer/src/kmc-package/test/fixtures/invalid/missing_model_id.kps
<?xml version="1.0" encoding="utf-8"?>
<Package>
  <System>
    <KeymanDeveloperVersion>12.0.1500.0</KeymanDeveloperVersion>
    <FileVersion>12.0</FileVersion>
  </System>
  <Info>
    <Name URL="">SENĆOŦEN (Saanich Dialect) Lexical Model</Name>
    <Copyright URL="">© 2019 National Research Council Canada</Copyright>
    <Author URL="mailto:Eddie.Santos@nrc-cnrc.gc.ca">Eddie Antonio Santos</Author>
    <Version>1.0.3</Version>
  </Info>
  <Files>
    <File>
      <Name>example.qaa.sencoten.model.js</Name>
      <Description>Lexical model example.qaa.sencoten.model.js</Description>
      <CopyLocation>0</CopyLocation>
      <FileType>.model.js</FileType>
    </File>
  </Files>
  <LexicalModels>
    <LexicalModel>
      <!-- #13783 missing ID (and Name irrelevant per #13640) -->
      <Languages>
        <Language ID="qaa">North Straits Salish</Language>
        <Language ID="qaa-Latn">SENĆOŦEN</Language>
      </Languages>
    </LexicalModel>
  </LexicalModels>
</Package>
